<resources>
    <string name="app_name">しょほうさん</string>
    <string name="action_settings">Settings</string>
    <string name="description">For Spajam 2018 Tokyo B</string>
    <string name="alarm_start">お食事中ですね\n30分後に確認しますね</string>
    <string name="wrong">間違えました</string>
    <string name="check_medicine">薬飲む</string>
    <string name="alarm_end">お食事は終わりましたか？\nお薬は摂取しましたか？</string>
    <string name="done">しました！</string>
    <string name="notification_title">食事中...</string>
    <string name="notification_content">終わったらお知らせしますね</string>
    <string name="frequency">用法</string>
    <string name="timing">調剤日</string>
    <string name="drug_name">お薬の名前</string>
    <string name="others">個数</string>
    <string name="submit">確定する</string>
</resources>
