<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/drug_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drug_name"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="223dp" />

    <EditText
        android:id="@+id/drug_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/drug_name_text_view"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/timing_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timing"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="124dp" />

    <EditText
        android:id="@+id/timing_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/timing_text_view"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/frequency_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/frequency_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/frequency_text_view"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/others_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/others"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="320dp" />

    <EditText
        android:id="@+id/others_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="10"
        app:layout_constraintTop_toBottomOf="@+id/others_text_view"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</android.widget.LinearLayout>